# kino-ssh-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html
src/: App.tsx  index.css  main.tsx  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  forwarding.rs  history.rs  host_keys.rs  keygen.rs  lib.rs  local_session.rs  metrics.rs  recorder.rs  sftp_session.rs  snippets.rs  ssh_session.rs  sync.rs  update.rs  vault.rs
src/components/: AboutModal.tsx  ChangePasswordModal.tsx  ConnectDialog.tsx  DockerPanel.tsx  ExportMenu.tsx  ForwardingPanel.tsx  HistoryModal.tsx  HostForm.tsx  HostKeyDialog.tsx  MetricsPanel.tsx  OsIcon.tsx  RecordingsModal.tsx  ReplayModal.tsx  SettingsMenu.tsx  SftpEditorModal.tsx  SftpModal.tsx  Sidebar.tsx  SnippetsModal.tsx  SyncModal.tsx  Terminal.tsx  ThemePicker.tsx  Unlock.tsx
src/store/: index.ts
