[package]
name = "ssh-manager"
version = "0.1.0"
description = "Kino SSH Manager - Secure SSH credential manager"
authors = ["Kino SSH Manager contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
ssh2 = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "5"
ureq = { version = "2", features = ["json"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
