[package]
name = "ssh-manager"
version = "0.4.3"
description = "Kino SSH Manager - Secure SSH credential manager"
authors = ["Kino SSH Manager contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
ssh-key = { version = "0.6", features = ["ed25519", "getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "5"
ureq = { version = "2", features = ["json"] }
zeroize = "1"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "process"] }
russh = "0.61"
russh-sftp = "2.3"
log = "0.4"

[dev-dependencies]
tempfile = "3"

# russh pulls pre-release RustCrypto crates (ssh-key/elliptic-curve/p256/…) that
# trip the std `ptr::copy_nonoverlapping` UB-precondition check during the SSH
# handshake. The violations are benign on supported platforms, but the check
# (enabled with debug-assertions) aborts the process on connect. Disable
# debug-assertions for dependencies only — our own crate keeps them on.
[profile.dev.package."*"]
debug-assertions = false
overflow-checks = false
